--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_screenutil: ^5.0.0+2
+  email_validator: ^2.0.1
+  firebase_auth: ^3.1.0
+  cloud_firestore: ^2.5.1
+  firebase_core: ^1.6.0
+  get: ^4.3.8
+  provider: ^6.0.0
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -60,10 +68,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Regular.ttf
+    - family: AzeretMono
+      fonts:
+        - asset: fonts/AzeretMono-Regular.ttf
+    - family: IndieFlower
+      fonts:
+        - asset: fonts/IndieFlower-Regular.ttf
+    - family: KaiseiHarunoUmi
+      fonts:
+        - asset: fonts/KaiseiHarunoUmi-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
