--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get: ^4.3.8
   provider: ^6.0.0
   flutter_rating_bar: ^4.0.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
